--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>Hello World</h1>
-<p>My first paragraph.</p>
+<p>I took this course because I needed to fill out my schedule and this looked interesting. I think it would be very handy in the future to know the basics of designing a website. I have done a little programming before so I hope I have no problems with that.</p>
 
 </body>
 </html>
