--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Page Title</title>
-</head>
 <body>
+  <h1>Hello World</h1>
+  <p>This is my first paragraph.</p>
+<p>This is my second paragraph.<br>And this is a new line.</p>
+ <p style="text-align:center;">This is a centered paragraph.</p>
+ <h2 style="color:red;">This is an h2 heading, colored red.</h2>
+<body style="background-color:powderblue;"> <h3>This is an h3 heading with a background color of "powder blue."</h3>
+<h5 style="font-family:verdana;">This is an h5 heading using verdana font.</h5>
+ <a href="http://mvl.org/">This is a link</a>
+  <p title="I'm a tooltip">I'm a tooltip.</p>
+  <p style="font-size:160%;">This is a paragraph sized to 160%.</p>
+<hr>
+  <pre>
+  My Bonnie lies over the ocean.
 
-<h1>Hello World</h1>
-<p>I took this course because I needed to fill out my schedule and this looked interesting. I think it would be very handy in the future to know the basics of designing a website. I have done a little programming before so I hope I have no problems with that.</p>
+  My Bonnie lies over the sea.
 
-</body>
-</html>
+  My Bonnie lies over the ocean.
+
+  Oh, bring back my Bonnie to me.
+</pre>
