--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <p>This is my second paragraph.<br>And this is a new line.</p>
  <p style="text-align:center;">This is a centered paragraph.</p>
  <h2 style="color:red;">This is an h2 heading, colored red.</h2>
-<body style="background-color:powderblue;"> <h3>This is an h3 heading with a background color of "powder blue."</h3>
+ <h3<body style="background-color:powderblue;">This is an h3 heading with a background color of "powder blue."</h3>
 <h5 style="font-family:verdana;">This is an h5 heading using verdana font.</h5>
  <a href="http://mvl.org/">This is a link</a>
   <p title="I'm a tooltip">I'm a tooltip.</p>
